--- a/test1_TrafficSim_struct/test1_TrafficSim_struct.csproj
+++ b/test1_TrafficSim_struct/test1_TrafficSim_struct.csproj
@@ -61,7 +61,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="engine\RoadManagementEngine.cs" />
-    <Compile Include="src\Section.cs" />
+    <Compile Include="src\Segment.cs" />
     <Compile Include="interfaces\WorldObject.cs" />
     <Compile Include="src\Way.cs" />
   </ItemGroup>
@@ -73,9 +73,7 @@
       <DependentUpon>MainDrawForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="data\structures\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
